tests/baselines/reference/interfaceDeclaration2.errors.txt
tests/cases/compiler/interfaceDeclaration2.ts(5,7): error TS2300: Duplicate identifier 'I2'.


==== tests/cases/compiler/interfaceDeclaration2.ts (1 errors) ====
    interface I1 { }
    module I1 { }
    
    interface I2 { }
    class I2 { }
          ~~
!!! error TS2300: Duplicate identifier 'I2'.
    
    interface I3 { }
    function I3() { }
    
    interface I4 { }
    var I4:number;
    
    